SintaxisAbstracta/src/c_ast_descendente/ConstructorASTs.java
/* ConstructorASTs.java */
/* Generated By:JavaCC: Do not edit this line. ConstructorASTs.java */
package c_ast_descendente;
import asint.ClaseSemantica;
import asint.SintaxisAbstracta.*;

public class ConstructorASTs implements ConstructorASTsConstants {
   private ClaseSemantica sem = new ClaseSemantica();

  final public Prog analiza() throws ParseException {
    trace_call("analiza");
    try {
Prog prog;
      prog = programa();
      jj_consume_token(0);
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("analiza");
    }
}

  final public Prog programa() throws ParseException {
    trace_call("programa");
    try {
Bloque bloq;
      bloq = bloque();
{if ("" != null) return sem.prog(bloq);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("programa");
    }
}

  final public Bloque bloque() throws ParseException {
    trace_call("bloque");
    try {
Instrs instrs; Decs decs;
      jj_consume_token(34);
      decs = declaraciones();
      instrs = instrucciones();
      jj_consume_token(35);
{if ("" != null) return sem.bloq(decs, instrs);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bloque");
    }
}

  final public Decs declaraciones() throws ParseException {
    trace_call("declaraciones");
    try {
LDecs ldecsa;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case int_id:
      case real_id:
      case bool_id:
      case string_id:
      case struct_id:
      case proc_id:
      case type_id:
      case iden:
      case 44:{
        ldecsa = lista_declaraciones();
        jj_consume_token(36);
{if ("" != null) return sem.siDecs(ldecsa);}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
{if ("" != null) return sem.noDecs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaraciones");
    }
}

  final public LDecs lista_declaraciones() throws ParseException {
    trace_call("lista_declaraciones");
    try {
LDecs ldecsa; Dec dec;
      dec = declaracion();
      ldecsa = r_lista_declaraciones(sem.unaDec(dec));
{if ("" != null) return ldecsa;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_declaraciones");
    }
}

  final public LDecs r_lista_declaraciones(LDecs ldecsah) throws ParseException {
    trace_call("r_lista_declaraciones");
    try {
LDecs ldecsa; Dec dec;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 37:{
        jj_consume_token(37);
        dec = declaracion();
        ldecsa = r_lista_declaraciones(sem.muchasDecs(ldecsah,dec));
{if ("" != null) return ldecsa;}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
{if ("" != null) return ldecsah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("r_lista_declaraciones");
    }
}

  final public Dec declaracion() throws ParseException {
    trace_call("declaracion");
    try {
Token id; ParamForms params; Bloque bloque; Tipo tipo;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case proc_id:{
        jj_consume_token(proc_id);
        id = jj_consume_token(iden);
        params = parametros_formales();
        bloque = bloque();
{if ("" != null) return (Dec) sem.decProc(id.image, params, bloque).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case type_id:{
        jj_consume_token(type_id);
        tipo = tipo();
        id = jj_consume_token(iden);
{if ("" != null) return (Dec) sem.decType(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case int_id:
      case real_id:
      case bool_id:
      case string_id:
      case struct_id:
      case iden:
      case 44:{
        tipo = tipo();
        id = jj_consume_token(iden);
{if ("" != null) return (Dec) sem.decVar(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion");
    }
}

  final public ParamForms parametros_formales() throws ParseException {
    trace_call("parametros_formales");
    try {
ParamForms a;
      jj_consume_token(38);
      a = lista_parametros_formales_e();
      jj_consume_token(39);
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametros_formales");
    }
}

  final public ParamForms lista_parametros_formales_e() throws ParseException {
    trace_call("lista_parametros_formales_e");
    try {
LParams lparams;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case int_id:
      case real_id:
      case bool_id:
      case string_id:
      case struct_id:
      case iden:
      case 44:{
        lparams = lista_parametros_formales();
{if ("" != null) return sem.siParam(lparams);}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
{if ("" != null) return sem.noParam();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_parametros_formales_e");
    }
}

  final public LParams lista_parametros_formales() throws ParseException {
    trace_call("lista_parametros_formales");
    try {
LParams lparams; ParamForm param;
      param = parametro_formal();
      lparams = r_lista_parametros_formales(sem.unParam(param));
{if ("" != null) return lparams;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_parametros_formales");
    }
}

  final public LParams r_lista_parametros_formales(LParams ah) throws ParseException {
    trace_call("r_lista_parametros_formales");
    try {
LParams lparams; ParamForm param;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 40:{
        jj_consume_token(40);
        param = parametro_formal();
        lparams = r_lista_parametros_formales(sem.muchosParams(ah, param));
{if ("" != null) return lparams;}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("r_lista_parametros_formales");
    }
}

  final public ParamForm parametro_formal() throws ParseException {
    trace_call("parametro_formal");
    try {
Tipo tipo; ParamForm param;
      tipo = tipo();
      param = r_parametro_formal(tipo);
{if ("" != null) return param;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametro_formal");
    }
}

  final public ParamForm r_parametro_formal(Tipo tipoah) throws ParseException {
    trace_call("r_parametro_formal");
    try {
Token id;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 41:{
        jj_consume_token(41);
        id = jj_consume_token(iden);
{if ("" != null) return (ParamForm) sem.paramFormRef(tipoah ,id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case iden:{
        id = jj_consume_token(iden);
{if ("" != null) return (ParamForm) sem.paramForm(tipoah ,id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("r_parametro_formal");
    }
}

  final public Tipo tipo() throws ParseException {
    trace_call("tipo");
    try {
Tipo tipoa;
      tipoa = T0();
{if ("" != null) return tipoa;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo");
    }
}

  final public Tipo T0() throws ParseException {
    trace_call("T0");
    try {
Tipo tipo1a; Tipo tipoa;
      tipo1a = T1();
      tipoa = RT0(tipo1a);
{if ("" != null) return tipoa;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("T0");
    }
}

  final public Tipo RT0(Tipo tipoah) throws ParseException {
    trace_call("RT0");
    try {
Tipo tipoa; Token id;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 42:{
        jj_consume_token(42);
        id = jj_consume_token(literalEntero);
        jj_consume_token(43);
        tipoa = RT0((Tipo) sem.tArray(tipoah, id.image).ponFila(id.beginLine).ponCol(id.beginColumn));
{if ("" != null) return tipoa;}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
{if ("" != null) return tipoah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RT0");
    }
}

  final public Tipo T1() throws ParseException {
    trace_call("T1");
    try {
Tipo tipoa;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 44:{
        jj_consume_token(44);
        tipoa = T1();
{if ("" != null) return sem.tPunt(tipoa);}
        break;
        }
      case int_id:
      case real_id:
      case bool_id:
      case string_id:
      case struct_id:
      case iden:{
        tipoa = T2();
{if ("" != null) return tipoa;}
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("T1");
    }
}

  final public Tipo T2() throws ParseException {
    trace_call("T2");
    try {
Token id; LCampos campos;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case int_id:{
        jj_consume_token(int_id);
{if ("" != null) return sem.tInt();}
        break;
        }
      case real_id:{
        jj_consume_token(real_id);
{if ("" != null) return sem.tReal();}
        break;
        }
      case bool_id:{
        jj_consume_token(bool_id);
{if ("" != null) return sem.tBool();}
        break;
        }
      case string_id:{
        jj_consume_token(string_id);
{if ("" != null) return sem.tString();}
        break;
        }
      case iden:{
        id = jj_consume_token(iden);
{if ("" != null) return (Tipo) sem.tIden(id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case struct_id:{
        jj_consume_token(struct_id);
        jj_consume_token(34);
        campos = lista_campos();
        jj_consume_token(35);
{if ("" != null) return sem.tStruct(campos);}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("T2");
    }
}

  final public LCampos lista_campos() throws ParseException {
    trace_call("lista_campos");
    try {
Campo camp; LCampos lcampos;
      camp = campo();
      lcampos = r_lista_campos(sem.unCamp(camp));
{if ("" != null) return lcampos;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_campos");
    }
}

  final public LCampos r_lista_campos(LCampos lcamposah) throws ParseException {
    trace_call("r_lista_campos");
    try {
LCampos lcampos; Campo camp;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 40:{
        jj_consume_token(40);
        camp = campo();
        lcampos = r_lista_campos(sem.muchosCamps(lcamposah, camp));
{if ("" != null) return lcampos;}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
{if ("" != null) return lcamposah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("r_lista_campos");
    }
}

  final public Campo campo() throws ParseException {
    trace_call("campo");
    try {
Tipo tipo; Token id;
      tipo = tipo();
      id = jj_consume_token(iden);
{if ("" != null) return (Campo) sem.campo(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("campo");
    }
}

  final public Instrs instrucciones() throws ParseException {
    trace_call("instrucciones");
    try {
LInstrs lInstrsa;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case if_id:
      case call_id:
      case nl_id:
      case new_id:
      case read_id:
      case write_id:
      case delete_id:
      case while_id:
      case 34:
      case 45:{
        lInstrsa = lista_instrucciones();
{if ("" != null) return sem.siInstrs(lInstrsa);}
        break;
        }
      default:
        jj_la1[10] = jj_gen;
{if ("" != null) return sem.noInstrs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instrucciones");
    }
}

  final public LInstrs lista_instrucciones() throws ParseException {
    trace_call("lista_instrucciones");
    try {
LInstrs lInstrsa; Instr instra;
      instra = instruccion();
      lInstrsa = r_lista_instrucciones(sem.unaInstr(instra));
{if ("" != null) return lInstrsa;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_instrucciones");
    }
}

  final public LInstrs r_lista_instrucciones(LInstrs instrah) throws ParseException {
    trace_call("r_lista_instrucciones");
    try {
LInstrs lInstrsa; Instr instra;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 37:{
        jj_consume_token(37);
        instra = instruccion();
        lInstrsa = r_lista_instrucciones(sem.muchasInstrs(instrah,instra));
{if ("" != null) return lInstrsa;}
        break;
        }
      default:
        jj_la1[11] = jj_gen;
{if ("" != null) return instrah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("r_lista_instrucciones");
    }
}

  final public Instr instruccion() throws ParseException {
    trace_call("instruccion");
    try {
Exp exp; ParamReales param; Bloque bloq; Instr instr; Token id;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 45:{
        jj_consume_token(45);
        exp = expresion();
{if ("" != null) return sem.arrobaInstr(exp);}
        break;
        }
      case call_id:{
        jj_consume_token(call_id);
        id = jj_consume_token(iden);
        param = parametros_reales();
{if ("" != null) return (Instr) sem.procInstr(id.image, param).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case nl_id:{
        jj_consume_token(nl_id);
{if ("" != null) return sem.nlInstr();}
        break;
        }
      case new_id:{
        jj_consume_token(new_id);
        exp = expresion();
{if ("" != null) return sem.newInstr(exp);}
        break;
        }
      case read_id:{
        jj_consume_token(read_id);
        exp = expresion();
{if ("" != null) return sem.readInstr(exp);}
        break;
        }
      case write_id:{
        jj_consume_token(write_id);
        exp = expresion();
{if ("" != null) return sem.writeInstr(exp);}
        break;
        }
      case delete_id:{
        jj_consume_token(delete_id);
        exp = expresion();
{if ("" != null) return sem.deleteInstr(exp);}
        break;
        }
      case while_id:{
        jj_consume_token(while_id);
        exp = expresion();
        bloq = bloque();
{if ("" != null) return sem.whileInstr(exp, bloq);}
        break;
        }
      case if_id:{
        jj_consume_token(if_id);
        exp = expresion();
        bloq = bloque();
        instr = r_instruccion_if(exp, bloq);
{if ("" != null) return instr;}
        break;
        }
      case 34:{
        bloq = bloque();
{if ("" != null) return sem.bloqueInstr(bloq);}
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instruccion");
    }
}

  final public Instr r_instruccion_if(Exp exp, Bloque bloq) throws ParseException {
    trace_call("r_instruccion_if");
    try {
Bloque bloque;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case else_id:{
        jj_consume_token(else_id);
        bloque = bloque();
{if ("" != null) return sem.ifElseInstr(exp, bloq, bloque);}
        break;
        }
      default:
        jj_la1[13] = jj_gen;
{if ("" != null) return sem.ifInstr(exp, bloq);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("r_instruccion_if");
    }
}

  final public ParamReales parametros_reales() throws ParseException {
    trace_call("parametros_reales");
    try {
ParamReales lista;
      jj_consume_token(38);
      lista = lista_expresiones_e();
      jj_consume_token(39);
{if ("" != null) return lista;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametros_reales");
    }
}

  final public ParamReales lista_expresiones_e() throws ParseException {
    trace_call("lista_expresiones_e");
    try {
LExp lista;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case literalEntero:
      case literalReal:
      case literalCadena:
      case not_id:
      case true_id:
      case false_id:
      case null_id:
      case iden:
      case 38:
      case 47:{
        lista = lista_expresiones();
{if ("" != null) return sem.siExp(lista);}
        break;
        }
      default:
        jj_la1[14] = jj_gen;
{if ("" != null) return sem.noExp();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_expresiones_e");
    }
}

  final public LExp lista_expresiones() throws ParseException {
    trace_call("lista_expresiones");
    try {
LExp exps; Exp exp;
      exp = expresion();
      exps = r_lista_expresiones(sem.unaExp(exp));
{if ("" != null) return exps;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_expresiones");
    }
}

  final public LExp r_lista_expresiones(LExp ah) throws ParseException {
    trace_call("r_lista_expresiones");
    try {
LExp exps; Exp exp;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 40:{
        jj_consume_token(40);
        exp = expresion();
        exps = r_lista_expresiones(sem.muchasExp(ah, exp));
{if ("" != null) return exps;}
        break;
        }
      default:
        jj_la1[15] = jj_gen;
{if ("" != null) return ah;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("r_lista_expresiones");
    }
}

  final public Exp expresion() throws ParseException {
    trace_call("expresion");
    try {
Exp e;
      e = E0();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expresion");
    }
}
